test/files/pos/t3249/Test.java
public class Test {
  public static void meh() {
    new A<Integer>().f();
  }
}